2007-03-06  Thomas Wood  <thos@gnome.org>

	* www.gnome.org/index.html: Clarify location of GUADEMY in upcoming events,
	and cite GPUL as oranisors. Fixes bug 413849.

2007-03-06  Olav Vitters  <olav@bkor.dhs.org>

	* www.gnome.org/htaccess: redirect /projects/soc to
	http://live.gnome.org/SummerOfCode2007.

2007-03-02  Thomas Wood  <thos@gnome.org>

	* www.gnome.org/index.html: Fix a typo

2007-02-28  Thomas Wood  <thos@gnome.org>

	* www.gnome.org/img/flash/Makefile.am: Add the GUADEC call for papers image

2007-02-28  Thomas Wood  <thos@gnome.org>

	* www.gnome.org/index.html: Add information about Guademy

2007-02-28  Thomas Wood  <thos@gnome.org>

	* www.gnome.org/index.html: FOSDEM has finished for this year.
	Add image about GUADEC call for papers.
	* www.gnome.org/img/flash/guadec-callforpapers.png: Added

2007-02-22  Thomas Wood  <thos@gnome.org>

	* www.gnome.org/index.html: Correct the location of Brussels

2007-02-20  Thomas Wood  <thos@gnome.org>

	* www.gnome.org/index.html: Update "Upcoming Events"

2007-02-06  Mariano Suárez-Alvarez  <mariano@gnome.org>

	* configure.in: add www.gnome.org/projects/tracker/js/Makefile
	which is breaking the build.

2007-02-04  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>

	* configure.in: Add AC_OUTPUT entries for gyrus website.

2007-02-04  Richard Hughes  <richard@hughsie.com>

	* www.gnome.org/projects/gnome-power-manager/bugs.html:
	* www.gnome.org/projects/gnome-power-manager/gpm.html:
	* www.gnome.org/projects/gnome-power-manager/gpp.html:
	* www.gnome.org/projects/gnome-power-manager/hal.html:
	* www.gnome.org/projects/gnome-power-manager/index.html:
	* www.gnome.org/projects/gnome-power-manager/packages.html:
	Update the copyright links, and point to svn, not CVS.

2007-01-19  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* www.gnome.org/projects/hipo/index.html:
	* www.gnome.org/projects/index.html:
	update a couple of links.

2007-01-19  Pedro Villavicencio Garrido  <pvillavi@gnome.org>
