@@ -38,11 +38,16 @@ title="GUADEC Call For Papers" alt="GUADEC Call For Papers" /></a>
 
 <div id="bottomLeftLeft">
 <h2>Latest News</h2>
+
+<h3><a href="http://www.gnomejournal.org/">The GNOME Journal, March Edition</a></h3>
+<p>The latest issue of the GNOME Journal has just been published. GNOME Journal
+is an online magazine devoted to everything surrounding the GNOME Desktop.</p>
+
 <h3><a href="http://www.gnome.org/start/2.16/">GNOME 2.16 Released!</a></h3>
 <p>The GNOME desktop is now faster and easier to configure than ever before.
 Learn more about this release through the <a
 href="http://www.gnome.org/start/2.16/">GNOME 2.16 start page</a> and the
-detailed <a href="http://www.gnome.org/start/2.16/notes/C/">release notes</a>.
+detailed <a href="http://www.gnome.org/start/2.16/notes/C/">release notes</a>.</p>
 
 <h3><a href="http://www.gnome.org/projects/wsop/">Women's Summer Outreach Program 2006</a></h3>
 <p>Following on from GNOME's participation in Google's
@@ -52,9 +57,6 @@ from women, and we think it's time to do something to encourage more women to
 join our development community. <a
 href="http://www.gnome.org/projects/wsop/">Check it out!</a></p>
 
-<h3><a href="http://www.gnomejournal.org/">The GNOME Journal, August Edition</a></h3>
-<p>The latest issue of the GNOME Journal has just been published. GNOME Journal
-is an online magazine devoted to everything surrounding the GNOME Desktop.</p>
 </div>
 
 <div id="bottomLeftRight">
