@@ -1,3 +1,8 @@
+2007-03-07  Lucas Rocha  <lucasr@gnome.org>
+
+	* www.gnome.org/index.html: add GNOME Journal March Edition
+	announcement in latest news.
+
 2007-03-06  Thomas Wood  <thos@gnome.org>
 
 	* www.gnome.org/index.html: Clarify location of GUADEMY in upcoming events,
